--- a/assets/css/inicio.css
+++ b/assets/css/inicio.css
@@ -32,11 +32,103 @@ h1 {
   color: #3d3c3c;
 }
 
+/* BOTONES */
+.plpx-btn {
+  margin: 0.25em;
+  padding: 0.35em 0.75em 0.35em 0.75em;
+  border-radius: 4px;
+  box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.5);
+}
+.plpx-btn:focus {
+  outline: none;
+}
+
+.plpx-btn-line {
+  margin: 0.25em;
+  padding: 0.3em 0.75em 0.3em 0.75em;
+  border-radius: 4px;
+  box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.5);
+}
+.plpx-btn-line:focus {
+  outline: none;
+}
+
+.plpx-btn-white {
+  border: 0;
+  background-color: white;
+  color: #a30036;
+}
+.plpx-btn-white:hover {
+  color: #a30036;
+  background-color: #f1f1f1;
+}
+.plpx-btn-white:active {
+  color: white;
+  background-color: #cfcaca;
+}
+
+.plpx-btn-white-line {
+  border: 1px solid #eeeeee;
+  background-color: white;
+  color: #a30036;
+}
+.plpx-btn-white-line:hover {
+  color: #a30036;
+  background-color: #f1f1f1;
+}
+.plpx-btn-white-line:active {
+  color: white;
+  background-color: #cfcaca;
+}
+
+.plpx-btn-primary {
+  border: 0;
+  background-color: #a30036;
+  color: white;
+}
+.plpx-btn-primary:hover {
+  color: white;
+  background-color: #b0003b;
+}
+.plpx-btn-primary:active {
+  color: white;
+  background-color: #630021;
+}
+
+.plpx-btn-primary-line {
+  border: 1px solid #a30036;
+  background-color: white;
+  color: #a30036;
+}
+.plpx-btn-primary-line:hover {
+  color: WHITE;
+  background-color: #b0003b;
+}
+.plpx-btn-primary-line:active {
+  color: white;
+  background-color: #630021;
+}
+
 .div_opciones {
+  border: 0;
   margin-top: 1em;
   text-align: center;
 }
 
+/*
+.plpx-btn-white-line {
+	background-color: white;
+	color: $color_primary;
+	&:hover {
+		color: $color_primary;
+		background-color: $color_gray_light;
+	}
+
+	&:active {
+		color: white;
+		background-color: $color_primary_dark;
+	}
+}*/
 .btn-pulpox-primary {
   background-color: #a30036;
   color: white;
@@ -62,7 +154,7 @@ h1 {
 }
 .btn-pulpox-primary--line:active {
   color: white;
-  background-color: #630021;
+  background-color: #f1f1f1;
 }
 
 .btn-pulpox-primary-disabled {
@@ -363,6 +455,91 @@ h1 {
   border-radius: 4px;
 }
 
+/******************************* MENÚ PRINCIPAL */
+.main-menu {
+  background-color: #a30036;
+  box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.62);
+}
+
+.main-menu a {
+  color: white;
+}
+
+.navbar-pulpox .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, .75)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+#main-menu-toggler {
+  text-align: right;
+}
+
+.nav-item {
+  margin: 0.25em;
+  padding: 0.25em;
+}
+.nav-item:hover {
+  background-color: #f00050;
+}
+.nav-item:hover .nav-link {
+  color: white;
+}
+.nav-item:active {
+  background-color: #f1f1f1;
+}
+.nav-item:active .nav-link {
+  color: white;
+}
+
+#boton-cuenta {
+  background-color: #f03a0c;
+  border: 0;
+  box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.62);
+}
+
+#dropdown_menu {
+  float: right;
+}
+#dropdown_menu .dropdown-menu {
+  background-color: #8a2107;
+  padding: 0;
+  left: -4.5em;
+  margin-top: 0.25em;
+}
+#dropdown_menu .dropdown-item:hover {
+  background-color: #f03a0c;
+  color: white;
+}
+
+.btn-pulpox-login {
+  color: white;
+  cursor: pointer;
+}
+.btn-pulpox-login:hover {
+  color: white;
+  background-color: #f03a0c;
+}
+.btn-pulpox-login:active {
+  color: white;
+}
+
+.btn-pulpox-singup {
+  color: #a30036;
+  background-color: white;
+  cursor: pointer;
+}
+
+#btn-pulpox-singup {
+  color: #a30036;
+}
+#btn-pulpox-singup:hover {
+  color: white;
+  background-color: #f03a0c;
+}
+#btn-pulpox-singup:active {
+  color: white;
+}
+
+/******************************* INICIO */
 .datos_anuncio {
   color: #636161;
   font-size: smaller;
