--- a/assets/scss/base/_config.scss
+++ b/assets/scss/base/_config.scss
@@ -41,11 +41,20 @@ $border_radius: 4px;
 $border_width: 0.5px;
 $border_color: lightgrey;
 $border_style: solid;
+$btn_padding: 0.35em 0.75em 0.35em 0.75em;
+$btn_line_padding: 0.3em 0.75em 0.3em 0.75em;
+$btn_margin: 0.25em;
 
 @mixin shadow_div {
 	-webkit-box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.62);
 	-moz-box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.62);
 	box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.62);
+}
+
+@mixin btn_shadow {
+	-webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.5);
+	-moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.5);
+	box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.5);
 }
 
 @mixin border_div {
@@ -55,10 +64,109 @@ $border_style: solid;
 	border-radius: $border_radius;
 }
 
+/* BOTONES */
+
+.plpx-btn {
+	margin: $btn_margin;
+	padding: $btn_padding;
+	border-radius: $border_radius;
+	@include btn_shadow;
+
+	&:focus {
+		outline: none;
+	}
+}
+
+.plpx-btn-line {
+	margin: $btn_margin;
+	padding: $btn_line_padding;
+	border-radius: $border_radius;
+	@include btn_shadow;
+
+	&:focus {
+		outline: none;
+	}
+}
+
+.plpx-btn-white {
+	border: 0;
+	background-color: white;
+	color: $color_primary;
+	&:hover {
+		color: $color_primary;
+		background-color: $color_gray_light;
+	}
+	&:active {
+		color: white;
+		background-color: $color_dark_opaque;
+	}
+}
+
+.plpx-btn-white-line {
+	border: 1px solid rgb(238, 238, 238);
+	background-color: white;
+	color: $color_primary;
+
+	&:hover {
+		color: $color_primary;
+		background-color: $color_gray_light;
+	}
+
+	&:active {
+		color: white;
+		background-color: $color_dark_opaque;
+	}
+}
+
+.plpx-btn-primary {
+	border: 0;
+	background-color: $color_primary;
+	color: white;
+	&:hover {
+		color: white;
+		background-color: $color_primary_medium_light;
+	}
+	&:active {
+		color: white;
+		background-color: $color_primary_dark;
+	}
+}
+
+.plpx-btn-primary-line {
+	border: 1px solid $color_primary;
+	background-color: white;
+	color: $color_primary;
+	&:hover {
+		color: WHITE;
+		background-color: $color_primary_medium_light;
+	}
+
+	&:active {
+		color: white;
+		background-color: $color_primary_dark;
+	}
+}
+
 .div_opciones {
+	border: 0;
 	margin-top: 1em;
 	text-align: center;
 }
+
+/*
+.plpx-btn-white-line {
+	background-color: white;
+	color: $color_primary;
+	&:hover {
+		color: $color_primary;
+		background-color: $color_gray_light;
+	}
+
+	&:active {
+		color: white;
+		background-color: $color_primary_dark;
+	}
+}*/
 
 .btn-pulpox-primary {
 	background-color: $color_primary;
@@ -88,7 +196,7 @@ $border_style: solid;
 
 	&:active {
 		color: white;
-		background-color: $color_primary_dark;
+		background-color: $color_gray_light;
 	}
 }
 
