--- a/assets/scss/pulpox.scss
+++ b/assets/scss/pulpox.scss
@@ -20,28 +20,26 @@
 }
 
 .nav-item {
-	margin: 0.25em;
 	padding: 0.25em;
+	border-radius: $border_radius;
 
 	&:hover {
-		background-color: $color_primary_light;
+		background-color: white;
+		box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
 		.nav-link {
-			color: white;
+			color: $color_primary;
 		}
 	}
 
 	&:active {
 		background-color: $color_gray_light;
-		.nav-link {
-			color: white;
-		}
 	}
 }
 
 #boton-cuenta {
-	background-color: $color_secondary_light;
-	border: 0;
-	box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.62);
+	//background-color: $color_secondary_light;
+	//border: 0;
+	//box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 #dropdown_menu {
