--- a/assets/scss/pulpox.scss
+++ b/assets/scss/pulpox.scss
@@ -4,3 +4,7 @@
 
 //PÁGINAS
 @import "../../../pulpox_ads_nuevo/assets/scss/inicio.scss";
+@import "../../../pulpox_ads_nuevo/assets/scss/mis-anuncios.scss";
+@import "../../../pulpox_ads_nuevo/assets/scss/_mianuncio-nuevo.scss";
+@import "../../../pulpox_ads_nuevo/assets/scss/_mianuncio-ver.scss";
+@import "../../../pulpox_ads_nuevo/assets/scss/_mianuncio-nuevo-preview.scss";
