--- a/assets/scss/_inicio.scss
+++ b/assets/scss/_inicio.scss
@@ -60,6 +60,7 @@ tr:hover {
 	-webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
 	-moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
 	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
+	background-color: white;
 }
 
 #pulpox_btn_filtros {
