--- a/assets/scss/_mis-anuncios.scss
+++ b/assets/scss/_mis-anuncios.scss
@@ -1,5 +1,3 @@
-@import "../../../pulpox_ads_nuevo/assets/scss/base/config.scss";
-
 /**
 	NOTA: ALGUNOS ESTULO ESTAN DEFINIDOS EN EL PROPIO TABLE	
 */
@@ -8,6 +6,12 @@
 	background-color: $color_primary;
 	color: white;
 	border-radius: $border_radius;
+
+	&:hover {
+		background-color: $color_primary !important;
+		color: white;
+		border-radius: $border_radius;
+	}
 }
 
 .page-link {
