--- a/assets/scss/base/_colors.scss
+++ b/assets/scss/base/_colors.scss
@@ -1,19 +1,25 @@
-$color_primary_light: #f00050;
-$color_primary_medium_light: #b0003b;
-$color_primary: #a30036;
-$color_primary_medium_dark: #8a002e;
-$color_primary_dark: #630021;
+// COLOR PRIMARY
+
+$color_primary_ultra_light: #fedce8;
+$color_primary_light: #d63a6e;
+$color_primary_medium_light: #c90b4b;
+$color_primary: #a30037;
+$color_primary_medium_dark: #84002c;
+$color_primary_dark: #5e0020;
+
 $color_primary_opaque: #a3526d;
 $color_primary_filter: invert(14%) sepia(79%) saturate(7289%) hue-rotate(334deg)
 	brightness(63%) contrast(104%);
 $color_primary_filter_danger: invert(6%) sepia(83%) saturate(6889%)
 	hue-rotate(350deg) brightness(116%) contrast(104%);
 
-$color_secondary_light: #f03a0c;
-$color_secondary_medium_light: #b02a09;
-$color_secondary: #a32708;
-$color_secondary_medium_dark: #8a2107;
-$color_secondary_dark: #631805;
+$color_secondary_ultra_light: #c0e5fd;
+$color_secondary_light: #30719b;
+$color_secondary_medium_light: #047dcb;
+$color_secondary: #1572ae;
+$color_secondary_medium_dark: #043c60;
+$color_secondary_dark: #022a44;
+
 $color_secondary_opaque: #a36252;
 
 $color_danger_light: #f00018;
@@ -31,10 +37,20 @@ $color_warning: #a39600;
 $color_warning_dark: #635b00;
 $color_warning_opaque: #a39c52;
 
+$color_info_light: #30719b;
+$color_info_medium_light: #105f92;
+$color_info: #074a76;
+$color_info_medium_dark: #043c60;
+$color_info_dark: #022a44;
+
+$color_info_opaque: #5281a3;
+
+/*
 $color_info_light: #008cf0;
 $color_info: #005fa3;
 $color_info_dark: #00508a;
 $color_info_opaque: #5281a3;
+*/
 
 $color_dark: #3d3c3c;
 $color_medium_dark: #575555;
