--- a/assets/scss/_inicio.scss
+++ b/assets/scss/_inicio.scss
@@ -75,3 +75,68 @@ tr:hover {
 		background-color: $color_secondary_dark;
 	}
 }
+
+.plpx-resultados-anuncios {
+	background-color: gray;
+}
+
+.plpx-resultados-anuncio__lateral {
+	background-color: green;
+	width: 220px;
+	height: 90px;
+	margin-bottom: 1em;
+}
+
+.plpx-resultados-anuncio__table {
+	background-color: red;
+}
+
+// Small devices (landscape phones, less than 768px)
+@media (max-width: 575.98px) {
+	.plpx-resultados-plpx-resultados-anuncio__table {
+		display: block;
+	}
+	.plpx-resultados-anuncios {
+		display: none;
+	}
+}
+
+// Small devices (landscape phones, less than 768px)
+@media (min-width: 576px) and (max-width: 767.98px) {
+	.plpx-resultados-plpx-resultados-anuncio__table {
+		display: block;
+	}
+	.plpx-resultados-anuncios {
+		display: none;
+	}
+}
+
+// Medium devices (tablets, less than 992px)
+@media (min-width: 768px) and (max-width: 991.98px) {
+	.plpx-resultados-plpx-resultados-anuncio__table {
+		display: block !important;
+	}
+	.plpx-resultados-anuncios {
+		display: none;
+	}
+}
+
+// Large devices (desktops, less than 1200px)
+@media (min-width: 992px) and (max-width: 1199.98px) {
+	.plpx-resultados-anuncio__table {
+		display: none;
+	}
+	.plpx-resultados-anuncios {
+		display: block;
+	}
+}
+
+// Large devices (desktops, less than 1200px)
+@media (min-width: 1200px) {
+	.plpx-resultados-anuncio__table {
+		display: none;
+	}
+	.plpx-resultados-anuncios {
+		display: block;
+	}
+}
