--- a/assets/scss/_menu.scss
+++ b/assets/scss/_menu.scss
@@ -1,5 +1,9 @@
 .main-menu {
-	background-color: $color_primary;
+	background-image: linear-gradient(
+		to right,
+		$color_primary,
+		$color_primary_dark
+	);
 	box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.62);
 }
 
@@ -20,7 +24,7 @@
 	padding: 0.25em;
 	border-radius: $border_radius;
 	&:hover {
-		background-color: $color_primary_light;
+		background-color: $color_primary_dark;
 		.nav-link {
 			color: white;
 		}
@@ -59,7 +63,7 @@
 
 	&:hover {
 		color: white;
-		background-color: $color_secondary_light;
+		background-color: $color_secondary;
 	}
 
 	&:active {
@@ -75,7 +79,7 @@
 
 	&:hover {
 		color: white !important;
-		background-color: $color_secondary_light;
+		background-color: $color_secondary;
 		border: none;
 	}
 
